--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ function toggleCalgaryPanel() {
   
 <script>
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/AQ_Block_Heater/sw.js');
+  navigator.serviceWorker.register('/ACA_Community/sw.js');
 }
 </script>
 
